# Search-Engine

./: CMakeLists.txt  DSPair.h  Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  QueryEngine.cpp  QueryEngine.h  README.md  UserInterface.cpp  UserInterface.h  avlNode.h  avlTests.cpp  avlTree.h  hashy.h  hashyTests.cpp  main.cpp  stopWords.txt
